@@ -80,7 +80,7 @@ $(function() {
 
             // Add a PDF button
             if (pdfenabled) {
-                ed.ui.registry.addIcon("pdf", '<img src="static/images/ui/tinymce-pdf.png" />')
+                ed.ui.registry.addIcon("pdf", '<img src="static/images/ui/tinymce-pdf.png" />');
                 ed.ui.registry.addButton("pdf", {
                     tooltip: "View this document as a PDF",
                     icon: "pdf",
